--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 pip install -U sentence-transformers
 pip install --upgrade openai
+
+pip install bitsandbytes==0.39.0
+transformers@git+https://github.com/huggingface/transformers.git
+# peft@git+https://github.com/huggingface/peft.git
+accelerate@git+https://github.com/huggingface/accelerate.git
