--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ pip install bitsandbytes==0.39.0
 transformers@git+https://github.com/huggingface/transformers.git
 # peft@git+https://github.com/huggingface/peft.git
 accelerate@git+https://github.com/huggingface/accelerate.git
+
+
+
+llama-cpp-python@git+https://github.com/abetlen/llama-cpp-python.git
