--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ accelerate@git+https://github.com/huggingface/accelerate.git
 
 
 llama-cpp-python@git+https://github.com/abetlen/llama-cpp-python.git
+
+
+
+
+pip install -U flagai
+pip install bminf
